--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.16.0"
   }
 }
